# Mobile-OV_Alpha

./: .gitignore  MOBILEOV_DEVELOPMENT_NOTES.md  OPENVID_TRAINING_GUIDE.md  README.md  README_NEXT_RUN_SANA_PARITY_20260222.md  README_STAGE3_ATTENTION_CHANGES_20260221.md  SCHEDULER_VERIFICATION.md  SETUP_AND_TRAINING.md  environment.yml  finetune_model.py  pip_requirements.txt  project_requirements.txt
configs/: stage1_full_mobile_o_fulldit_diffonly_init10k_v2_bs64_8gpu.yaml  stage1_full_mobile_o_fulldit_lexical_v2_bs64_8gpu.yaml  stage1_full_mobile_o_fulldit_mcp_v1_bs64_8gpu.yaml  stage1_joint_openvid_fullmobile_o_fulldit_diffonly_initlatest_v2_bs64_8gpu.yaml  stage1_prompt_teacher_distill_openvid_current_laion_coyo_5v1i_2gpu_20260318.yaml  stage1_teacher_free_full_mobile_o_image_bridge_fulldit_lexical_gated_k2_online_teacher_bs64_v2_8gpu_20260420.yaml  stage1_teacher_free_full_mobile_o_image_bridge_fulldit_mcpfull_k4_online_teacher_bs64_v1_8gpu_20260420.yaml  stage1_teacher_free_full_mobile_o_image_bridge_only_lexical_gated_k2_online_teacher_bs4_v2_1gpu_20260417.yaml  stage1_teacher_free_full_mobile_o_image_bridge_only_mcpfull_k4_online_teacher_bs4_v1_1gpu_20260417.yaml  stage1_teacher_free_joint_openvid_current_laion_coyo_bridge_dit_online_teacher_30k_2gpu_20260315.yaml  (+29 more)
download_data/: .gitignore  README.md  pyproject.toml  requirements.txt
download_data/openvid_dataops/: __init__.py  cli.py  download.py  encode.py  index.py  manifest.py  part_spec.py  paths.py
download_data/scripts/: download_wan_vae_2_1.py  run_encode_4gpu.sh  run_pipeline_example.sh
(+181 files in other folders)
