[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openvid-dataops"
version = "0.1.0"
description = "OpenVid downloader + WAN VAE preprocessing toolkit"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0.0",
  "opencv-python>=4.8.0",
  "pillow>=10.0.0",
  "torchvision>=0.18.0",
  "huggingface_hub>=0.24.0",
  "einops>=0.7.0",
]

[project.scripts]
openvid-dataops = "openvid_dataops.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["openvid_dataops*"]
